Fixc newsletter size on small screens

--- a/src/components/ui/NewsletterSignup.scss
+++ b/src/components/ui/NewsletterSignup.scss
@@ -17,6 +17,7 @@
   align-items: center;
 
   input[type='email'] {
+    max-width: 100vw;
     width: 25rem;
     height: 5rem;
     box-sizing: border-box;
